2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Route.h:
	* Route.cpp: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.cpp: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.cpp:
	* Inline.h: 

2013-12-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Route.h:
	* SFVec3.h:
	* SFVec4.h:
	* Parser.h:
	* SFTime.h:
	* SFVec2.h:
	* MFNode.h:
	* SFImage.h:
	* SFColor.h:
	* SFString.h:
	* Proto.h:
	* Scene.h:
	* Console.h:
	* Browser.h:
	* World.h:
	* X3DParser.h:
	* SFMatrix3.h:
	* SFMatrix4.h:
	* X3DSFNode.h:
	* X3DScalar.h:
	* X3DBaseNode.h:
	* X3DBrowser.h:
	* SFRotation4.h:
	* SFColorRGBA.h:
	* X3DArrayField.h:
	* Notification.h:
	* Text.h:
	* ExternProto.h:
	* Sound.h:
	* Shape.h:
	* ExportedNode.h:
	* ImportedNode.h:
	* SpiderMonkey.h:
	* TransformHandle.h:
	* SignalPdu.h:
	* Layout.h:
	* FlyViewer.h:
	* LightContainer.h:
	* Layer.h:
	* NurbsSet.h:
	* Box.h:
	* FontStyle.h:
	* ProfileInfo.h:
	* LOD.h:
	* Group.h:
	* Material.h:
	* TransformHandle.cpp:
	* WalkViewer.h:
	* X3DBrowserContext.h:
	* X3DBrowserSurface.h:
	* Selection.h:
	* KeyDevice.h:
	* NoneViewer.h:
	* WorldInfo.h:
	* ReceiverPdu.h:
	* Color.h:
	* Cone.h:
	* BrowserApplication.h:
	* BindableNodeList.h:
	* Switch.h:
	* AudioClip.h:
	* TimeSensor.h:
	* Contour2D.h:
	* LookAtViewer.h:
	* BindableNodeStack.h:
	* NurbsCurve.h:
	* Arc2D.h:
	* ComponentInfo.h:
	* Script.h:
	* Appearance.h:
	* Normal.h:
	* ViewportContainer.h:
	* MetadataSet.h:
	* X3DFlyViewer.h:
	* HAnimSite.h:
	* Sphere.h:
	* HAnimJoint.h:
	* Disk2D.h:
	* Anchor.h:
	* Inline.h:
	* LineSet.h:
	* GeoLOD.h:
	* ClipPlaneContainer.h:
	* Viewport.h:
	* ExamineViewer.h:
	* LayerSet.h:
	* ShaderPart.h:
	* NurbsCurve2D.h:
	* LayoutLayer.h:
	* ScreenGroup.h:
	* MetadataFloat.h:
	* EspduTransform.h:
	* SpotLight.h:
	* Transform.h:
	* PointSet.h:
	* TransmitterPdu.h:
	* LayoutGroup.h:
	* X3DShapeNode.h:
	* BoxOptions.h:
	* MotionBlur.h:
	* HAnimSegment.h:
	* MetadataDouble.h:
	* PointLight.h:
	* Circle2D.h: