@@ -1,5 +1,12 @@
 2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Traverse.cpp:
+	* TransformHandle.h:
+	* X3DHandleObject.h:
+	* TransformHandle.cpp: 
+
+2013-12-03  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Route.h:
 	* Route.cpp: 
 
